--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Welcome To My First Web App Which Name is Locoto</h1>
+<font style="font-size: 50px; font-family: blush script"> WELCOME TO LOCOTO </font>
 {% endblock %}
 
 {% block css %}
