--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ABOUTUS</title>
     <style>
         * {
   font-family: Nunito, sans-serif;
@@ -70,7 +70,7 @@ a {
   font-size: 22px;
   font-weight: 700;
   line-height: 30px;
-  color: rgb(176, 98, 255);
+  color: rgb(255, 2, 2);
   padding-top: 0px;
   padding-right: 10px;
   padding-bottom: 0px;
@@ -94,7 +94,7 @@ a {
 }
 
 .text-blk.subHeadingText {
-  color: rgb(102, 102, 102);
+  color: rgb(5, 219, 235);
   font-size: 26px;
   line-height: 32px;
   font-weight: 700;
@@ -237,7 +237,7 @@ a {
   flex-direction: column;
   align-items: flex-start;
   max-width: 430px;
-  background-color: rgb(176, 98, 255);
+  background-color: rgb(0, 0, 0);
   padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -254,7 +254,7 @@ a {
 .purpleText {
   font-size: 18px;
   line-height: 26px;
-  color: white;
+  color: rgb(255, 2, 2);
   margin-top: 0px;
   margin-right: 0px;
   margin-bottom: 10px;
@@ -627,24 +627,29 @@ a {
     <div class="responsive-container-block bigContainer">
         <div class="responsive-container-block Container bottomContainer">
           <div class="ultimateImg">
-            <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/mp4.svg">
+            <img class="mainImg" src="static/7f802d13-f6e3-4476-a9a8-37c7ac9733c7.jpeg" alt="Main Image">
             <div class="purpleBox">
               <p class="purpleText">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus lectus viverra in semper nec pretium mus.
+                🚀 Our Mission<br>
+                🌱 Preserve regional languages and promote linguistic inclusivity.<br>
+                🌐 Make technology accessible to all — students, educators, travelers, and communities.
               </p>
               <img class="stars" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/mp5.svg">
             </div>
           </div>
           <div class="allText bottomText">
             <p class="text-blk headingText">
-              About Me
+              About Us👋
             </p>
             <p class="text-blk subHeadingText">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Bridging the Language Divide with Technology.
+              At LOCOTO,
+              In a world rich with cultural and linguistic diversity, our mission is to create a smarter, faster, and more inclusive way for people to access information across regional languages.
             </p>
             <p class="text-blk description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum pulvinar ullamcorper suspendisse ac eget. Pellentesque tempus leo in ullamcorper quis vestibulum ligula elementum ut.
-            </p>
+              🧠 Our Vision
+              To build a world where everyone, regardless of language or literacy level, can understand, connect, and communicate effortlessly — through the power of AI, OCR, and real-time translation.
+              </p>
             <a class="explore">
               View Services
             </a>
