--- a/templates/tempro.html
+++ b/templates/tempro.html
@@ -444,9 +444,8 @@ p {
 <style>/* animated-style.css */
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #0f1010; /* Light blueish background */
+        background-color: #15c5c5; /* Light blueish background */
         display: flex;
-        gradient: linear-gradient(135deg, #e3f2fd, #ffffff);
         justify-content: center;
         align-items: center;
         min-height: 100vh;
