--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,9 @@ https://templatemo.com/tm-565-onix-digital
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <div class="logo">
               <img src="static/images/ChatGPT Image Apr 13, 2025, 03_27_10 PM.png" alt="LOCOTO" width="150" height="150">
-            </a>
+            </div>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
@@ -98,7 +98,7 @@ https://templatemo.com/tm-565-onix-digital
                 </div>
                 <div class="item header-text">
                   <h2>🔎 What is LOCOTO?</h2>
-                  <h6>LOCOTO<em>(Language On Camera – Translate On The Go)</em> is a smart, real-time image-to-text translation and speech platform. Simply scan any image with text, <span> LOCOTO will extract, translate, and even read it aloud — all in your preferred regional language.</span></h6>
+                  <h6>LOCOTO<em>(Language On Camera – Translate On The Go)</em> is a smart, real-time image-to-text translation and speech platform.<span> LOCOTO will extract, translate, and even read it aloud — all in your preferred regional language.</span></h6>
                   <p>Perfect for travelers, students, educators, and anyone looking to break down language walls in everyday life.Thank you.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
@@ -244,7 +244,7 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-  <div id="subscribe" class="subscribe">
+  <!-- <div id="subscribe" class="subscribe">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -263,7 +263,7 @@ https://templatemo.com/tm-565-onix-digital
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   
@@ -274,11 +274,12 @@ https://templatemo.com/tm-565-onix-digital
           <div class="section-heading">
             <h2>Feel free to <em>Contact</em> us via the <span>form</span></h2>
             <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1779.8398194660651!2d80.94023014633468!3d26.85013998728267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd1ca1b7057f%3A0x8932f633116edfbc!2sHazratganj%20Metro%20Station!5e0!3m2!1sen!2sin!4v1744560566391!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <!-- <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe> -->
             </div>
             <div class="info">
-              <span><i class="fa fa-phone"></i> <a href="#">010-020-0340<br>090-080-0760</a></span>
-              <span><i class="fa fa-envelope"></i> <a href="#">info@company.com<br>mail@company.com</a></span>
+              <!-- <span><i class="fa fa-phone"></i> <a href="#">010-020-0340<br>090-080-0760</a></span> -->
+              <span><i class="fa fa-envelope"></i> <a href="#">info@Locoto.com<br>mail@Locoto.com</a></span>
             </div>
           </div>
         </div>
