--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,9 @@ https://templatemo.com/tm-565-onix-digital
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="register">Sign-Up</a></li>
               <li class="scroll-to-section"><a href="login">Sign-In</a></li>
+              <li class="scroll-to-section"><a href="upload">Upload</a></li>  
               <li class="scroll-to-section"><a href="feedback">Feedback</a></li>
-              <li class="scroll-to-section"><a href="aboutus">About Us</a></li>  
+              <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
