--- a/templates/upload.html
+++ b/templates/upload.html
@@ -279,7 +279,7 @@
               <li class="scroll-to-section"><a href="register">Sign-Up</a></li>
               <li class="scroll-to-section"><a href="login">Sign-In</a></li>
               <li class="scroll-to-section"><a href="upload" class="active">Upload</a></li>
-              <li class="scroll-to-section"><a href="feedback">Feedback</a></li>
+              <!-- <li class="scroll-to-section"><a href="feedback">Feedback</a></li> -->
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
               <li class="scroll-to-section">
                 <div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div>
