--- a/templates/login.html
+++ b/templates/login.html
@@ -252,7 +252,7 @@
               <li class="scroll-to-section"><a href="register">Sign-Up</a></li>
               <li class="scroll-to-section"><a href="login" class="active">Sign-In</a></li>
               <li class="scroll-to-section"><a href="upload">Upload</a></li>  
-              <li class="scroll-to-section"><a href="feedback">Feedback</a></li>
+              <!-- <li class="scroll-to-section"><a href="feedback">Feedback</a></li> -->
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="/#contact">Contact Us Now</a></div></li> 
             </ul>        
