--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-565-onix-digital
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <div class="logo">
-              <img src="static/images/ChatGPT Image Apr 13, 2025, 03_27_10 PM.png" alt="LOCOTO" width="150" height="150">
+              <img src="static/images/ChatGPT Image Apr 13, 2025, 03_15_04 PM.png" alt="LOCOTO" width="150" height="150">
             </div>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -335,11 +335,18 @@ https://templatemo.com/tm-565-onix-digital
         <div class="col-lg-3">
           <div class="about footer-item">
             <div class="logo">
-              <img src="static/images/ChatGPT Image Apr 13, 2025, 03_27_10 PM.png" alt="LOCOTO">
+              <img src="static/images/ChatGPT Image Apr 13, 2025, 03_15_04 PM.png" alt="LOCOTO">
             </div>
             <h4>info@Locoto.com</h4>
             </div>
         </div>
+        <div class="col-lg-12">
+          <div class="copyright">
+            <p>Copyright © 2025 LOCOTO | All Rights Reserved. 
+            <br>
+            Designed by <a rel="nofollow" href="https://templatemo.com" title="free CSS templates">Two Brothers</a></p>
+          </div>
+        </div>  
       </div>
     </div>
   </footer>
