--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@ https://templatemo.com/tm-565-onix-digital
                     </div>
                   </div>
                 </div>
-                <div class="item header-text fade-in-up">
+                <div class="item header-text fade-in-up"> <!--ஒவ்வொரு மொழியின் குரல், ஒவ்வொரு இதயத்தின் வார்த்தைகள்.-->
                   <div class="hindi-tagline"> हर भाषा की आवाज़, हर दिल की बात।</div>
                   <div class="transliteration">🎵 Har bhasha ki awaaz, har dil ki baat.</div>
                   <div class="translation">💬 Voice of every language, words from every heart.</div>
